--- a/INB374/css/message.css
+++ b/INB374/css/message.css
@@ -19,6 +19,27 @@
     float: left;
 }
 
+#message-red {
+    font-family: 'Veranda','Goudy Old Style',sans-serif;
+    position: fixed;
+    top: 30px;
+    left: 2vw;
+    width: 96%;
+    z-index: 105;
+    text-align: center;
+    font-weight: bold;
+    font-size: 100%;
+    color: white;
+    padding: 10px 0px 10px 0px;
+    background-color: #C00000;
+}
+
+#message-red span {
+    text-align: center;
+    width: 95%;
+    float: left;
+}
+
 .close-notify {
     white-space: nowrap;
     float: right;
